--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -39,7 +39,7 @@
     "openSource": "开源",
     "openSourceDescription": "所有工具都是开源的，并可在 GitHub 上贡献。",
     "productHunt": "🎉 我们上线了 Product Hunt！支持我们并给我们反馈",
-    "rocksDevTools": "RocksDev.工具",
+    "rocksDevTools": "RocksDev.Tools",
     "starOnGitHub": "在 GitHub 上点赞",
     "tools": "工具",
     "tryNow": "立即试用",
