--- a/lang/zh-HK/common.json
+++ b/lang/zh-HK/common.json
@@ -39,7 +39,7 @@
     "openSource": "開源",
     "openSourceDescription": "所有工具都是開源的，並可在 GitHub 上貢獻。",
     "productHunt": "🎉 我們上線了 Product Hunt！支持我們並給我們反饋",
-    "rocksDevTools": "RocksDev.工具",
+    "rocksDevTools": "RocksDev.Tools",
     "starOnGitHub": "在 GitHub 上點贊",
     "tools": "工具",
     "tryNow": "立即試用",
