update lang & seo

--- a/lang/zh-HK/text.json
+++ b/lang/zh-HK/text.json
@@ -1,43 +1,43 @@
 {
   "text": {
-    "title": "文本工具",
-    "description": "为您的网站提供文本工具",
-    "tryNow": "立即试用",
-    "free": "免费",
-    "openSource": "开源",
+    "title": "文字工具",
+    "description": "為您的網站提供文字工具",
+    "tryNow": "立即試用",
+    "free": "免費",
+    "openSource": "開源",
     "text-formatter": {
-      "title": "文本格式化器",
-      "description": "使用高级工具格式化和操作您的文本",
-      "uppercase": "大写",
-      "lowercase": "小写",
+      "title": "文字格式化器",
+      "description": "使用進階工具格式化和操作您的文字",
+      "uppercase": "大寫",
+      "lowercase": "小寫",
       "capitalize": "標題大小寫",
       "sentence": "句子大小寫",
       "alternating": "交替大小寫",
       "trim": "清除空格",
       "remove-lines": "單行",
-      "copy-success": "文本已複製到剪貼簿",
-      "download-success": "文本已下載",
+      "copy-success": "文字已複製到剪貼簿",
+      "download-success": "文字已下載",
       "stats": {
-        "chars": "字符",
-        "words": "單詞",
+        "chars": "字元",
+        "words": "字詞",
         "lines": "行"
       },
-      "apply-to-input": "應用到輸入",
+      "apply-to-input": "套用到輸入",
       "upload": "上傳",
       "clear": "清除",
-      "input-text": "輸入文本",
+      "input-text": "輸入文字",
       "formatted-result": "格式化結果",
       "copy": "複製",
       "download": "下載",
-      "read-only-result": "只讀結果",
-      "uppercase-description": "將文本轉換為全大寫",
-      "lowercase-description": "將文本轉換為全小寫",
-      "capitalize-description": "將每個單詞的首字母大寫",
+      "read-only-result": "唯讀結果",
+      "uppercase-description": "將文字轉換為全大寫",
+      "lowercase-description": "將文字轉換為全小寫",
+      "capitalize-description": "將每個字詞的首字母大寫",
       "sentence-description": "將每個句子的首字母大寫",
       "alternating-description": "交替大小寫",
       "trim-description": "清除多餘空格並修剪",
       "remove-lines-description": "移除所有換行符",
-      "input-text-placeholder": "輸入或粘貼您的文本..."
+      "input-text-placeholder": "輸入或貼上您的文字..."
     }
   }
 }
